--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,146 @@
+html {
+  font-size: 1rem;
+}
+
+.row{
+	height:auto ! important;
+	
+}
 .header-page {
+	height:10vh;
 	background-color:rgb(2, 35, 90);
 	color:#fff;
+	padding:0 10px;
+}
+
+.main-area {
+	min-height:91vh;
+	height:auto;
+}
+.main-area .area-nav {
+	min-height:100%;
+	max-height:auto;
+	background-color:rgb(2, 35, 90);
+	
+}
+.main-area .content-area {
+	min-height:100%;
+	max-height:auto ;
+	background-color:#ddd;
+	
+}
+.header-area h1{
+	text-align:center;
+}
+.area-nav a {
+	color:#fff;
+}
+
+#mostrar-hora {
+	font-style:italic;
+	font-size:1.3rem;
+	color:rgb(255,170,0);
+}
+.first-home-style {
+	height:41%;
+	
+}
+.relatory-area {
+	min-height: 52%;
+		
+}
+/*
+.occurrences, .confirmations {
+	height:89vh;
+}*/
+.first-home-style img{
+	width:inherit;
+}
+.first-home-style .jumbotron {
+	background-color: transparent!important;
+}
+@media (min-width:960px){
+	.navbar {
+	justify-content:flex-start;
+	}
+}
+@media (min-width:992px){
+	.navbar {
+	flex-direction:column;
+	}
+   	.collapse .dropdown {
+	position:relative;
+	
+	}
+	.navbar-expand-lg .navbar-nav .dropdown-menu {
+     position: static; 
+}
+
+	.collapse .navbar-nav{
+	flex-direction:column;
+	justify-content:flex-start;
+	flex-wrap:wrap;
+	}
+	.collapse .navbar-nav a {
+	font-size:1.1rem;
+	}
+}
+.area-nav a.dropdown-item{
+	color:#000;
+}
+@media (min-width:301px) and (max-width:769px){
+	.main-area {
+	height:auto;
+	}
+	.header-page{
+	height:22vh;
+	border-bottom:1px solid #fff;
+	
+	}
+	.area-nav {
+
+	max-height:auto;
+	}
+
+}
+@media (max-width:400px){
+	.main-area {
+	height:auto;
+	}
+	.header-page{
+	height:43vh;
+	border-bottom:1px solid #fff;
+	padding:10px;
+	}
+	.area-nav {
+
+	max-height:auto;
+	}
+	.occurrences .occurrences-title, .confirmations .confirmations-title {
+	font-size:20px;
+	}
+}
+@media (max-width:350px){
+	
+	.header-page .system-title{
+	font-size:25px !important;
+	
+	}
+}
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 1.2rem;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 1.4rem;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 1.6rem;
+  }
 }
