--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
 		</main>
 	</div>
 
-	<div th:replace="~{base :: footer-imports}"></div>
+	<div style='display:none' th:replace="~{base :: footer-imports}"></div>
 </body>
 </html>
 
