Começando a trabalhar com carros suspeitos.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,10 +5,11 @@ html {
 
 body{
 	margin:0;
+	background-color:#ddd;
 }
 
 .container-fluid.total-area {
-	max-width: 1400px;
+	max-width: 1700px;
 }
 .row{
 	height:auto ! important;
