Começando a montar a API e aplicando Vue para puxar os dados puros.

--- a/src/main/resources/templates/veiculo/veiculo_suspeito.html
+++ b/src/main/resources/templates/veiculo/veiculo_suspeito.html
@@ -2,7 +2,7 @@
 <html>
 	<meta charset="utf-8">
 	<head th:replace="~{base :: head}"></head>
-	<body onload="onLoad()">
+	<body onLoad="onLoad()">
 		<div class='container-fluid total-area'>
 			<header th:replace='~{base :: header}'></header>
 			
@@ -11,7 +11,7 @@
 				<aside
 				 class='container-fluid content-area d-flex justify-content-center align-items-between col-md-7 flex-wrap col-lg-8 col-xl-9'>
 				 	<div class='table-responsive pl-2 pt-2'>
-				 	<table class="table table-striped table-hover table-dark">
+				 	<table class="table table-striped table-hover table-dark" id="suspeitos">
 					  <thead>
 					    <tr>
 					      <th scope="col">#</th>
@@ -30,52 +30,22 @@
 					    </tr>
 					  </thead>
 					  <tbody>
-					    <tr>
-					      <th scope="row">1</th>
-					      <td>Mark</td>
-					      <td>Otto</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
-					       <td>@mdo</td>
+					    <tr v-for='veiculo in veiculos_suspeitos'>
+					      <th scope='row'>1</th>
+					      <td >{{veiculo.id}}</td>
+					      <td>{{veiculo.dono}}</td>
+					      <td>{{veiculo.justificativa}}</td>
+					      <td>{{veiculo.localDoAlerta}}</td>
+					      <td>{{veiculo.momentoDoAlerta}}</td>
+					      <td>{{veiculo.nivelDeUrgencia}}</td>
+					      <td>{{veiculo.placa}}</td>
+					      <td>{{veiculo.statusDoVeiculo}}</td>
+					      <td>{{veiculo.ultimoUsuarioEditor}}</td>
+					      <td>{{veiculo.usuarioInsersor}}</td>
+					      <td>{{veiculo.zona}}</td>
+					      <td>{{veiculo.alertado}}</td>
 					    </tr>
-					    
-					    <tr>
-					      <th scope="row">2</th>
-					      <td>Jacob</td>
-					      <td>Thornton</td>
-					      <td>@fat</td>
-					       <td>@fat</td>
-					        <td>@fat</td>
-					         <td>@fat</td>
-					          <td>@fat</td>
-					           <td>@fat</td>
-					            <td>@fat</td>
-					             <td>@fat</td>
-					              <td>@fat</td>
-					               <td>@fat</td>
-					    </tr>
-					    <tr>
-					      <th scope="row">3</th>
-					      <td>Larry</td>
-					      <td>the Bird</td>
-					      <td>@twitter</td>
-					       <td>@twitter</td>
-					        <td>@twitter</td>
-					         <td>@twitter</td>
-					          <td>@twitter</td>
-					           <td>@twitter</td>
-					            <td>@twitter</td>
-					             <td>@twitter</td>
-					              <td>@twitter</td>
-					                <td>@twitter</td>
-					    </tr>
+					   
 					  </tbody>
 					</table>
 					</div>
@@ -83,5 +53,6 @@
 			</main>
 		</div>
 		<div style='display:none' th:replace="~{base :: footer-imports}"></div>
+		<script src='/js/vue_tabela_suspeitos.js'></script>
 	</body>
 </html>
